<resources>
    <string name="app_name">Love.ykt</string>
    <string name="action_settings">Настройки</string>

    <string name="prompt_username">Адрес почты</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_name">Имя</string>
    <string name="prompt_password_again">Повторите пароль</string>

    <string name="signup">Регистрация</string>
    <string name="loginVK">Вход через ВК</string>

    <string name="radio_male">Мужчина</string>
    <string name="radio_female">Женщина</string>
    <string name="dp">01.1.1990</string>

    <string name="welcome_text_up">Добавь свои фотографии и интересы</string>

    <string name="error_list">Пользователи не найдены</string>
    <string name="filter">Фильтр</string>

    <string name="error_intro">"Пожалуйста "</string>
    <string name="error_blank_username">введите почту</string>
    <string name="error_blank_password">введите пароль</string>
    <string name="error_mismatched_passwords">введите выбранный пароль дважды</string>
    <string name="error_join">", и "</string>
    <string name="error_end">.</string>
    <string name="progress_signup">Выполняется регистрация &#8230;</string>
    <string name="progress_login">Выполняется вход &#8230;</string>
    <string name="login">Вход</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_filter">Фильтр</string>

    <string name="filter_search">Поиск</string>

    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>

</resources>
