<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.savqa.love.FilterActivity">


    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/whoFind"
        android:textSize="20dp"
        android:gravity="center"/>

    <RadioGroup
        android:id="@+id/radioFilterSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/whoFind">

        <RadioButton
            android:id="@+id/radioMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male" />

        <RadioButton
            android:id="@+id/radioWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female" />

    </RadioGroup>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/howAge"
        android:textSize="20dp"
        android:layout_below="@+id/radioFilterSex"
        android:gravity="center"/>


    <LinearLayout android:id="@+id/seekbar_placeholder"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_below="@+id/howAge"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_search"
        android:id="@+id/filterButton"
        android:layout_below="@+id/seekbar_placeholder"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
